team/output/BD_772_700_1404/334/1/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_772_700_1404_3ayY8Cx.py", line 16
    yield(n, current_rank/batsman_num)
        ^
IndentationError: expected an indented block
